More fixes and updates to the default config files